--- a/index.html
+++ b/index.html
@@ -4,21 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpilProjekt 2020</title>
-
-
-    <canvas id="myCanvas" width="200" height="100"></canvas>
-
+    <style>
+        #canvas{
+            outline: 1px solid #000;
+        }
+    </style>
 
 </head>
 <body>
 
+    <canvas id="canvas" width="200" height="100"></canvas>
 
-
-
-
-
-
-    
     <script src="keyboard-input.js"></script>
 
 </body>
