--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>SpilProjekt 2020</title>
     
     <style>
-        #canvas{
+     /*   #canvas{
             outline: 1px solid #000;
-        }
+        }*/
     </style>
 
 </head>
@@ -19,6 +19,7 @@
 
     <script src="spil.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
+    <script src="karakter.js"></script>
 
 </body>
 </html>
