--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <script src="spil.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
+    <script src="shoot.js"></script>
     
 
 </body>
