--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <canvas id="canvas" width="800" height="400"></canvas>
 
     <script src="spil.js"></script>
+    <script src="karakter.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
     
 
