--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
+
+    <title>SpilProjekt 2020</title>
+
 </head>
 <body>
+    
+    <script src="karakter.js"></script>
     <script src="spil.js"></script>
     <script src="p5.js"></script>
+
 </body>
 </html>
