--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>SpilProjekt 2020</title>
+    <script src="karakter.js"></script>
+    <script src="p5.js"></script>
+    <script src="p5.sound.js"></script>
+    <script src="spil.js"></script>
 
 </head>
 <body>
-    
-    <script src="karakter.js"></script>
-    <script src="spil.js"></script>
-    <script src="p5.js"></script>
+
+
 
 </body>
 </html>
