--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
     <script src="karakter.js"></script>
     <script src="spil.js"></script>
+    <script src="weapons.js"></script>
     <script src="p5.js"></script>
 
 </body>
