--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="karakter.js"></script>
     <script src="spil.js"></script>
     <script src="p5.js"></script>
+    <script src="shoot.js"></script>
 
 </body>
 </html>
