--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="weapons.js"></script>
     <script src="shoot.js"></script>
     <script src="spil.js"></script>
+    <script src="p5.collide2D.js"></script>
 
 
 </body>
